	Joshua Nichols
	Bernard Niset
	David Maplesden
	Glen Marchesani
	Phil Messenger
	Mathias Muller
	Peter Oxenham
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Damon Rand
	Geoff Reedy
	Christian Riege
	Andreas Sahlbach
	Brian Sanders
	Adrian Sandor
	Ruslan Shevchenko
	John Shields
	Simon Steiner
	Johan Stuyts
	Jason Trump
	Tjeerd Verhagen
	James P. White
	Tom Widmer
	John Williams
	Patrick Woodworth
	Jaroslaw Wypychowski
	
   trunk
=====================================
- DOCUMENTATION: Filesystem resolver: talks about "patterns" but does not mention these must become absolute file paths (IVY-910)

- IMPROVEMENT: Error messages on use of relative paths can be cyrptic (IVY-909)
- IMPROVEMENT: Maven accepts illegal XML for its pom's, Ivy not (IVY-921)

- FIX: NullPointerException in AbstractPatternsBasedResolver when organization is null (IVY-928)
- FIX: NullPointerException when Ivy cannot locate pom parent (IVY-927)
- FIX: Cannot configure items with java.io.File attributes (IVY-905)
- FIX: Environment properties in ivy settings are no longer resolved (IVY-907)
- FIX: Resolve failed on certain proxy environment (IVY-911)
- FIX: Ivy can't handle bare POM ${groupId} property (IVY-913) (thanks to Tom Widmer)
- FIX: Properties needed to parse version in POM (IVY-914) (thanks to Tom Widmer)
- FIX: build.xml: checkstyle + checkstyle-report dont work together (IVY-919)
- FIX: Maven packaging of "pom" should add a "jar" artifact if present (IVY-920)
- FIX: StackOverflow when using ivy:settings with "ivy.instance" as id (IVY-924)
- FIX: Maven Pom reader doesn't handle optional dependencies correctly in some instances (IVY-926) (thanks to Phil Messenger)
- FIX: ivy:settings doesn't work if id is a property (IVY-925)
- FIX: HttpClientHandler hanging in certain cases (IVY-930) (thanks to Scott Hebert)
- FIX: Can't download files containing space or + in their names by HTTP (IVY-923)
- FIX: Maven2 parser doesn't support POMs with <model> as root (IVY-932)